chore: ignore notebook checkpoints, caches, egg‑info, diagrams, and parquet splits

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 "utils/__pycache__/"                
 "ai_text_detection_tool.egg-info/"  
 "data/*.parquet"                    
+"/notebooks/.ipynb_checkpoints/"   
+"/utils/__pycache__/"               
+"/ai_text_detection_tool.egg-info/" 
+"/diagrams/"                        
+"data/*.parquet"                    
