--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,10 @@ spacy==3.5.3        # (Optional) spaCy for advanced NLP (e.g., NER)
 en-core-web-sm==3.5.0  # (Optional) spaCy English model for NER
 vaderSentiment>=3.3.2
 pyarrow>=12.0.0
+fastapi==0.89.1
+uvicorn==0.20.0
+python-docx==0.8.11
+pdf2image==1.16.3
+pytesseract==0.3.10
+beautifulsoup4==4.11.2
+PyMuPDF==1.20.2
