fix(frontend): finalize React app styling and dark-mode input visibility

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "ai-text-detector-ui",
+  "name": "ai-text-detector-frontend",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "autoprefixer": "^10.0.0",
+    "postcss": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "tailwindcss": "^3.3.0",
-    "postcss": "^8.4.21",
-    "autoprefixer": "^10.4.13"
+    "tailwindcss": "^3.0.0",
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
